# throw_exception

./: .drone.jsonnet  .drone.star  .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  build.jam  index.html
.drone/: drone.sh
.github/workflows/: ci.yml
doc/: changes.adoc  description.adoc  examples.adoc  reference.adoc
include/boost/: throw_exception.hpp
include/boost/exception/: exception.hpp
meta/: libraries.json
test/: Jamfile.v2  lib1_throw.hpp  lib2_throw.hpp  lib3_throw.hpp  lib4_throw.cpp  lib4_throw.hpp  lib5_throw.cpp  lib5_throw.hpp  make_exception_ptr_nx_test.cpp  make_exception_ptr_nx_test2.cpp  throw_exception_nx_test.cpp  throw_exception_nx_test2.cpp  throw_exception_test2.cpp  throw_exception_test3.cpp  throw_exception_test4.cpp  throw_exception_test5.cpp  throw_exception_test6.cpp  throw_from_library_test.cpp  throw_with_location_test2.cpp  throw_with_location_test3.cpp
test/cmake_subdir_test/: CMakeLists.txt
